--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Set up JDK 14
         uses: actions/setup-java@v3
         with:
-          java-version: '14'
+          java-version: '14.*'
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
