--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,19 +1,33 @@
-name: Java CI with Maven
+name: Check POM XML
 
 on:
   push:
-    branches: ['main']
-  pull_request:
-    branches: ['main']
+    branches:
+      - main
 
 jobs:
-  build:
+  check:
+    name: Check POM XML
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Display Maven dependencies
-        run: mvn dependency:tree
-        # Optionally, you can specify the path to your pom.xml file if it's not in the root directory:
-        # run: mvn dependency:tree --file path/to/pom.xml
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: 8
+
+      - name: Validate POM XML (Java 8)
+        run: mvn validate --file pom.xml -Pjava8
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+
+      - name: Validate POM XML (Java 11)
+        run: mvn validate --file pom.xml -Pjava11
+
+      # Repeat the setup and validation steps for Java 14 and 17 if needed
