--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Check POM XML
+name: Java Versions
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   check:
-    name: Check POM XML
+    name: Java Versions
     runs-on: ubuntu-latest
 
     steps:
@@ -31,5 +31,23 @@ jobs:
 
       - name: Validate POM XML (Java 11)
         run: mvn validate --file pom.xml -Pjava11
+
+      - name: Set up JDK 14
+        uses: actions/setup-java@v2
+        with:
+          java-version: 14
+          distribution: 'adopt'
+
+      - name: Validate POM XML (Java 14)
+        run: mvn validate --file pom.xml -Pjava14
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: 17
+          distribution: 'adopt'
+
+      - name: Validate POM XML (Java 17)
+        run: mvn validate --file pom.xml -Pjava17
 
       # Repeat the setup and validation steps for Java 14 and 17 if needed
