--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -12,54 +10,44 @@
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
-  <properties>
+<properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version.8>8</java.version.8>
+		<java.version.11>11</java.version.11>
+		<java.version.14>14</java.version.14>
+		<java.version.17>17</java.version.17>
+	</properties>
 
   <profiles>
-    <!-- Profile for Java 8 -->
-    <profile>
-        <id>java8</id>
-        <activation>
-            <jdk>1.8</jdk>
-        </activation>
-        <dependencies>
-            <!-- Define dependencies compatible with Java 8 -->
-            <dependency>
-                <groupId>org.example</groupId>
-                 <artifactId>test2-jvm</artifactId>
-                    <version>1.4</version>
-            </dependency>
-            <!-- Add other Java 8 dependencies -->
-        </dependencies>
-    </profile>
-
-    <!-- Profile for Java 11 -->
-    <profile>
-        <id>java11</id>
-        <activation>
-            <jdk>11</jdk>
-        </activation>
-    </profile>
-
-        <!-- Profile for Java 14 -->
-    <profile>
-        <id>java14</id>
-        <activation>
-            <jdk>14</jdk>
-        </activation>
-    </profile>
-
-     <!-- Profile for Java 17 -->
-    <profile>
-        <id>java17</id>
-        <activation>
-            <jdk>17</jdk>
-        </activation>
-    </profile>
-</profiles>
+		<profile>
+			<id>java8</id>
+			<properties>
+				<java.version>${java.version.8}</java.version>
+			</properties>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+		</profile>
+		<profile>
+			<id>java11</id>
+			<properties>
+				<java.version>${java.version.11}</java.version>
+			</properties>
+		</profile>
+		<profile>
+			<id>java14</id>
+			<properties>
+				<java.version>${java.version.14}</java.version>
+			</properties>
+		</profile>
+		<profile>
+			<id>java17</id>
+			<properties>
+				<java.version>${java.version.17}</java.version>
+			</properties>
+		</profile>
+	</profiles>
 
 
 
@@ -90,6 +78,10 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          	<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
